Afegits botons al translate

--- a/src/main/angular-library/src/assets/i18n/ca.json
+++ b/src/main/angular-library/src/assets/i18n/ca.json
@@ -1,4 +1,7 @@
 {
+   "Search":"Buscar",
+   "Remove":"Elimina",
+   "New":"Nou",	
    "true":"Si",
    "false":"No",
     "application":{"name":"Administració - Diputació Barcelona"},
