--- a/src/main/angular-library/src/assets/i18n/es.json
+++ b/src/main/angular-library/src/assets/i18n/es.json
@@ -1,4 +1,7 @@
 {
+	"Search":"Buscar",
+	"Remove":"Eliminar",
+	"New":"Nuevo",
    "true":"Si",
    "false":"No",
     "application":{"name":"Administración - Diputación Barcelona"},
