--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/assets/i18n/es.json
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/assets/i18n/es.json
@@ -1,10 +1,6 @@
 {
-   "Search":"Search",
-   "Remove":"Remove",
-   "New":"New",
    "true":"Yes",
    "false":"No",
-   "application":{"name":"Management - Diputació Barcelona"},
    "mat-paginator-intl":{
     	"first_page":"First page",
     	"items_per_page":"items per page",
@@ -14,21 +10,21 @@
 		"previous_page":"Previous page"},
    "menu":{
     	"territories":"Territories",
+    	"territoriesTypes":"Territory types",
     	"users":"Users",
-    	"roles":"Role management",
-    	"territoryManagement":"Territory management",
-    	"territoryTypes":"Territory type management",
-    	"userManagement":"Users management"
-    	
-	},
+    	"roles":"Roles",
+    	"account":"Account",
+    	"connection":"Connections"},
 	"global":{
 		"actions":"Actions",
 		"add":"Add",
 		"edit":"Edit",
-		"delete":"Delete",
+		"delete":"Edit",
 		"save":"Save",
 		"cancel":"Cancel",
-		"back":"Cancel"
+		"back":"Cancel",
+		"data":"Data",
+		"login":"Login"
 	},
 	"territory":{
 		"item":"Territory",
@@ -66,12 +62,27 @@
 		"list":"Users",
 		"username":"Username",
 		"password":"Password",
+		"password-change":"Password change",
+		"confirmPassword":"Confirm password",
 		"administrator":"Administrator",
 		"blocked":"Blocked",
 		"firstName":"First name",
 		"lastName":"Last name",
 		"positions":"Positions",
 		"permissions":"Permissions"
+	},
+	"account":{
+		"item":"Account",
+		"username":"Username",
+		"password":"Password",
+		"confirmPassword":"Confirm password",
+		"password-change":"Password change",
+		"firstName":"First name",
+		"lastName":"Last name",
+    	"closeSession":"Close session",
+    	"password-dont-match":"The password and its confirmation do not match!",
+    	"password-change-success":"Password changed!",
+    	"update-success":"Data changed!"
 	},
 	"userPosition":{
 		"item":"Position",
@@ -86,5 +97,17 @@
 		"list":"Permissions",
 		"territory":"Territory",
 		"role":"Role"
+	},
+	"login":{
+		"bad-credentials":"Bad credentials"
+	},"connection":{
+		"item":"Connection",
+		"data":"Data",
+		"list":"Connections",
+		"name":"Name",
+		"user":"User",
+		"password":"Password",
+		"type":"Type",
+		"connectionString":"Connection string"
 	}
 }
