Refactor css to scss, change styles, and update version number to 0.7.8

--- a/src/main/angular-library/src/assets/i18n/ca.json
+++ b/src/main/angular-library/src/assets/i18n/ca.json
@@ -2,9 +2,13 @@
    "Search":"Buscar",
    "Remove":"Elimina",
    "New":"Nou",	
+   "requiredFieldMessage": "Empleni tots els camps obligatoris ",
+   "caution": "Perill",
+   "atention": "Atenció",
    "true":"Si",
    "false":"No",
-    "application":{"name":"Administració - Diputació Barcelona"},
+   "duplicateMessage": "Si dupliques les dades sense guardar els canvis, les modificacions seran sobreescrites, vols continuar?",
+	"application":{"name":"Administració - Diputació Barcelona"},
    "mat-paginator-intl":{
     	"first_page":"Primera pàgina",
     	"items_per_page":"elements per pàgina",
